--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,7 @@
         background-repeat: no-repeat;
         */
         background-image: url("../images/logo.svg");
-        width: 2em;
+        width: auto;
         height: 1em;
         font-size: 1.5em;
     }
@@ -42,19 +42,46 @@
         display: block;
         width: 100%;
     }
+    .page__logo{
+        display: block;
+        width: 4em;
+        margin: 0 auto;
+    }
     .page__content{
-        max-width: 50em;
-        margin: 0em, auto;
+        max-width: 40em;
+        margin: 0em auto;
     }
     .page__intro{
-        max-width: 50em;
+        max-width: 45em;
     }
     .page__header{
-        padding-left: calc(1em + 5%);
-        padding-bottom: calc(1em +5%);
+        padding: calc(1em + 5%);
         background-image: url(../images/header-2560w.webp);
         background-size: cover;
         background-position: top center;
+        color: var(--light);
+    }
+    .button{
+        display: inline-block;
+        padding: 0.5em 1em;
+        text-decoration: none;
+        border-radius: 0.5em;
+        font-weight: bold;
+    }
+    .button--secondary{
+        background-color: var(--light);
+        color: var(--black);
+    }
+    .button--secondary:hover{
+        background-color: var(--gray);
+        color: var(--light);
+    }
+    .button--primary{
+        background-color: var(--primary);
+        color: var(--light);
+    }
+    .button--primary:hover{
+        background-color: var(--black);
         color: var(--light);
     }
 }
