--- a/styles/main.css
+++ b/styles/main.css
@@ -65,6 +65,18 @@
         background-position: top center;
         color: var(--light);
     }
+    .page__footer
+    {
+        background-color: var(--gray);
+        padding: 2em 1em;
+    }
+    .footer__a
+    {
+        text-align: center;
+        font-weight: lighter;
+        text-decoration: none;
+        color: var(--light);
+    }
     .button{
         display: inline-block;
         padding: 1em 2em;
@@ -115,5 +127,19 @@
         width: 25em;
         display: inline-block;
         vertical-align: top;
+    }
+    .gallery__item
+    {
+        --okraj: 1em;
+        display: inline-block;
+        width: calc(100% - 2 * var(--okraj));
+        margin: var(--okraj);
+    }
+    @media screen and (min-width: 768px)
+    {
+        .gallery__item--50w
+        {
+            width: calc(50% - 2 * var(--okraj));
+        }
     }
 }
