--- a/styles/main.css
+++ b/styles/main.css
@@ -55,6 +55,24 @@
     {
         padding: 1em;
     }
+    .page__sleva{
+        background-color: var(--gray);
+        color: var(--light);
+        text-align: center;
+        font-weight: 700;
+        padding: 3em;
+        background-size: cover;
+        margin: 1em;
+    }
+    .page__sleva--maly{
+        font-size: 0.9em;
+    }
+    .page__sleva--stredni{
+        font-size: 4em;
+    }
+    .page__sleva--velky{
+        font-size: 7em;
+    }
     .page__intro{
         max-width: 48em;
     }
@@ -97,6 +115,14 @@
         color: var(--light);
     }
     .button--primary:hover{
+        background-color: var(--black);
+        color: var(--light);
+    }
+    .button--black{
+        background-color: var(--light);
+        color: var(--black);
+    }
+    .button--black:hover{
         background-color: var(--black);
         color: var(--light);
     }
